checking for bug with overflow

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -156,6 +156,7 @@ ul, li {
   background-size: cover;
   background-position: center;
   position: relative;
+  overflow: hidden;
 
 }
 
@@ -635,6 +636,9 @@ ul, li {
   font-size: 24px;
   font-style: italic;
   color: #999;
+        &--indent {
+          padding-top: 35px;
+        }
 }
 
 .carousel-page__author {
@@ -757,55 +761,39 @@ ul, li {
 
 
 
-portfolio {
-  text-align: center;
-  margin: 0 auto;
-}
 .pf__image {
-  vertical-align: top;
   width: 100%;
   
 }
 
 /*making gradient-hover effect*/
-.portfolio-basis {
-  position: relative;
-  margin: 0;
+.portfolio {
+  margin: 0 auto;
+        &-basis {
+          position: relative;
+          margin: 0;
+        }
 }
 
 
+
 .portfolio-basis-item {
-  position: absolute;
-  z-index: 1;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  font-size: 15px;
+  @extend %abs-center-align;
+  @extend %transition;
   color: #fff;
-  -webkit-transition: 0.2s linear;
-  -o-transition: 0.2s linear;
-  transition: 0.2s linear;
+  z-index: 5;
   opacity: 0;
+  text-align: center;
+          & .icon--photo {
+            font-size: 20px;
+          }
 
 }
 
 
 .portfolio-basis:after {
-  content: '';
-  top: 0;
-  left: 0;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(239, 139, 138, .9)), to(rgba(228, 215, 135, .9)));
-  background: -webkit-linear-gradient(top, rgba(239, 139, 138, .9) 0%, rgba(228, 215, 135, .9) 100%);
-  background: -o-linear-gradient(top, rgba(239, 139, 138, .9) 0%, rgba(228, 215, 135, .9) 100%);
-  background: linear-gradient(to bottom, rgba(239, 139, 138, .9) 0%, rgba(228, 215, 135, .9) 100%);
-  -webkit-transition: 0.2s linear;
-  -o-transition: 0.2s linear;
-  transition: 0.2s linear;
+  @extend %gradient;
+  @extend %transition;
   opacity: 0;
 
 }
@@ -829,13 +817,33 @@ portfolio {
   text-transform: uppercase;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
-  margin: 5px 0;
+  margin: 10px 0;
 }
 
 .basis-item__descr {
   font-family: 'Roboto', sans-serif;
   font-style: italic;
+  font-weight: 100;
 }
 
 
 
+.carousel-img {
+  float: left;
+  margin-right: 40px;
+}
+
+.third-carousel {
+  padding-top: 90px;
+  padding-bottom: 120px;
+}
+
+
+.control-size {
+  width: 100px;
+}
+
+
+.client-bg {
+  background-image: url(../img/clientbg.jpg);
+}
